# web3-news-intel

./: .env.example  .gitignore  ARCHITECTURE.md  CODEX_MASTER_PROMPT.md  DATA_MODEL.md  Dockerfile  MODULE_INTERFACES.md  OPERATIONS.md  PROJECT_STRUCTURE.md  README.md  SCORING_RULES.md  SECURITY_COMPLIANCE.md  SOURCES.example.yaml  TASK_BREAKDOWN.md  TEST_PLAN.md  docker-compose.acceptance.yml  docker-compose.yml  pyproject.toml  sources.yaml  start_all.bat  status_all.bat  stop_all.bat
.codex/: config.toml
app/: __init__.py  main.py
docs/: ADMIN_PANEL.md  AI_DATA_MODEL.md  AI_EVIDENCE_PACK.md  BUGFIX_BASELINE.md  DEEPSEEK_SETUP.md  EVENT_SEARCH.md  FEISHU_REPORTING.md  FEISHU_SETUP.md  FRONTEND_PERFORMANCE.md  GITHUB_HANDOFF.md  LOCAL_ONE_CLICK_RUNTIME.md  MULTI_SOURCE_CATALOG.md  PHASE_MULTI_SOURCE_AI_ACCEPTANCE.md  POLLING_AND_UI_PERFORMANCE.md  PRODUCTION_ACCEPTANCE.md  PR_FEISHU_ADMIN.md  PR_MULTI_SOURCE_AI.md  SECURITY_MULTI_SOURCE_AI.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
migrations/: env.py
scripts/: backfill_source.py  compose_feishu_e2e.py  compose_fixture_e2e.py  compose_full_mock_e2e.py  compose_mock_external.py  dev_acceptance.ps1  dev_api.py  dev_poll_sources.py  dev_runtime.ps1  feishu_test_send.py  frontend_performance_acceptance.py  init_db.py  live_source_canary.py  local_runtime.ps1  migrate_sqlite_to_postgres.py  pre_push_acceptance.py  repair_display_name.py  repair_duplicate_events.py  replay_raw_document.py  security_acceptance.py  start_all.ps1  stop_all.ps1  (+3 more)
(+287 files in other folders)
